# meterial-symbols

./: .gitignore  Dockerfile  README.md  __main__.py  flake.nix  params.py  pyproject.toml  symbols.json  symbols.py  wrangler.jsonc
.github/: dependabot.yml
.github/workflows/: cd.yml  ci-website.yml  ci.yml
website/: .gitignore  package.json  pnpm-lock.yaml  svelte-sitemap.config.ts  svelte.config.js  vite.config.ts  wrangler.jsonc
website/src/: app.css  app.d.ts  app.html
website/src/lib/: strings.ts  symbols.json
website/src/routes/: +layout.svelte  +page.svelte
website/static/: robots.txt
