[project]
name = "meterial-symbols"
description = "Material Symbols compatible font for all your meter/progress needs!"
version = "1.1.0"
readme = "README.md"
requires-python = ">= 3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "João Pereira", email = "me@toino.pt" }]

[dependency-groups]
dev = [
    "tox",
    { include-group = "build" },
    { include-group = "ruff" },
    { include-group = "typing" },
]
build = ["fonttools[woff] >= 4.59.1"]
ruff = ["ruff"]
typing = ["pyright", { include-group = "build" }]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
# Not all dependencies have type hints:
reportMissingTypeStubs = false
# Already covered by ruff's flake8-self checks:
reportPrivateImportUsage = false

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D212", "FIX"]

[tool.tox]
env_list = ["build", "format", "lint", "typecheck"]
no_package = true

[tool.tox.env.build]
dependency_groups = ["build"]
commands = [["python", "__main__.py"]]

[tool.tox.env.format]
dependency_groups = ["ruff"]
commands = [["ruff", "format", "--check"]]

[tool.tox.env.lint]
dependency_groups = ["ruff"]
commands = [["ruff", "check"]]

[tool.tox.env.typecheck]
dependency_groups = ["typing"]
commands = [["pyright"]]
